Reorganize: Move guide steps to folder, remove local files
- Created guide-steps/ folder for step-by-step files
- Removed .clawhub/, memory/, skills/github/ (local files)
- Only public files in root: README.md, PROJECT-IDEAS.md, TROUBLESHOOTING.md

--- a/memory/2026-02-06.md
+++ b/memory/2026-02-06.md
@@ -9,6 +9,24 @@
 - ✅ GitHub's secret scanning will block pushes containing real secrets
 - ✅ This is non-negotiable — protects user security and credentials
 
+## 🚫 Never Upload Local Workspace Files to GitHub
+
+**User explicitly instructed:** OpenClaw workspace files are personal and local — never commit them to public GitHub repos.
+
+**Files to keep local:**
+| File | Purpose |
+|------|---------|
+| AGENTS.md | Agent configurations |
+| SOUL.md | AI persona |
+| TOOLS.md | Local infrastructure |
+| USER.md | User preferences |
+| MEMORY.md | Long-term memory |
+| IDENTITY.md | AI identity |
+| HEARTBEAT.md | Task reminders |
+| .env | API keys (gitignore) |
+
+**Rule:** Only push guide-specific files (`README.md`, `01-*.md`, etc.) to public repos.
+
 ## OpenClaw VPS Guide Refactored
 
 **Breakdown completed:**
@@ -18,6 +36,7 @@
 - Created individual step files: `01-PREREQUISITES.md` through `14-HOMEBREW.md`
 - Added `PROJECT-IDEAS.md` with 10 TDD project ideas
 - Added `TROUBLESHOOTING.md` for common issues
+- Deleted local workspace files from public repo
 
 ## GitHub Push Blocked
 
